admin: Update openapi definitions
