# admin/src/api/index.ts
@@ -17,15 +17,21 @@ export type { CompoEntry } from "./models/CompoEntry";
 export type { CompoEntryRequest } from "./models/CompoEntryRequest";
 export type { Event } from "./models/Event";
 export type { EventRequest } from "./models/EventRequest";
+export type { Group } from "./models/Group";
+export type { GroupRequest } from "./models/GroupRequest";
 export type { PaginatedBlogEntryList } from "./models/PaginatedBlogEntryList";
 export type { PaginatedCompoEntryList } from "./models/PaginatedCompoEntryList";
 export type { PaginatedEventList } from "./models/PaginatedEventList";
+export type { PaginatedUserInfoList } from "./models/PaginatedUserInfoList";
 export type { PatchedBlogEntryRequest } from "./models/PatchedBlogEntryRequest";
 export type { PatchedCompoEntryRequest } from "./models/PatchedCompoEntryRequest";
 export type { PatchedEventRequest } from "./models/PatchedEventRequest";
+export type { PatchedUserInfoRequest } from "./models/PatchedUserInfoRequest";
 export type { Permission } from "./models/Permission";
+export type { PermissionRequest } from "./models/PermissionRequest";
 export type { SocialAuthURL } from "./models/SocialAuthURL";
 export type { UserInfo } from "./models/UserInfo";
+export type { UserInfoRequest } from "./models/UserInfoRequest";
 export type { UserLoginRequest } from "./models/UserLoginRequest";
 
 export { AuthService } from "./services/AuthService";
@@ -33,3 +39,4 @@ export { BlogEntriesService } from "./services/BlogEntriesService";
 export { EventsService } from "./services/EventsService";
 export { UserCompoEntriesService } from "./services/UserCompoEntriesService";
 export { UserInfoService } from "./services/UserInfoService";
+export { UsersService } from "./services/UsersService";
